# CMPE458

./: CMPE458 Phase 2 Report.docx  CMPE458 Phase 3 Report.docx  DOC.md  README.md
Phase 1/my-mini-compiler/: CMakeLists.txt
my-mini-compiler/: CMakeLists.txt  README.md
my-mini-compiler/phase1-w25/: GUIDE.md  README.md
my-mini-compiler/phase1-w25/documentation/: CMPE 458 Phase 1 Report.docx  README.md
my-mini-compiler/phase1-w25/include/: dynamic_array.h  operators.h  tokens.h
my-mini-compiler/phase1-w25/src/: dynamic_array.c  operators.c
my-mini-compiler/phase1-w25/src/lexer/: lexer.c  test.cisc
my-mini-compiler/phase1-w25/test/: array_test.c  comments.cisc  keywords&identifiers.cisc  numbers.cisc  operators.cisc  strings.cisc  test.cisc
my-mini-compiler/phase2-w25/include/: ast_node.h  dynamic_array.h  grammar.h  lexer.h  operators.h  parse_tokens.h  parser.h  token_list.h  tokens.h
my-mini-compiler/phase2-w25/src/: main.c  operators.c  token_list.c
my-mini-compiler/phase2-w25/src/lexer/: lexer.c
my-mini-compiler/phase2-w25/src/parser/: cfg_recursive_descent_parser.c  parser.c
my-mini-compiler/phase2-w25/test/: ConditionalStatements.cisc  DeclarationStatements.cisc  ExpressionStatements.cisc  PrintStatements.cisc  ScopeStatements.cisc  data_structure_test.c  lexer_test.cisc
my-mini-compiler/phase3-w25/include/: ast_node.h  ast_types.h  dynamic_array.h  grammar.h  lexer.h  operators.h  parse_tokens.h  parser.h  semantic.h  simple_dynamic_array.h  symbol_table.h  tokens.h  tree.h
my-mini-compiler/phase3-w25/semantic_rules/: EXPRESSIONS.md
my-mini-compiler/phase3-w25/src/: dynamic_array.c  main.c  operators.c  tree.c
my-mini-compiler/phase3-w25/src/enum_to_string/: ast_types.c  parse_tokens.c  tokens.c
my-mini-compiler/phase3-w25/src/lexer/: lexer.c
my-mini-compiler/phase3-w25/src/parser/: grammar.c  parser.c
my-mini-compiler/phase3-w25/src/semantics/: semantic.c
my-mini-compiler/phase3-w25/test/: DeclarationStatements.cisc  ReadStatements.cisc  RepeatUntilLoopStatements.cisc  ScopeStatements.cisc  ScopeTesting.cisc  WhileLoopStatements.cisc  data_structure_test.c  lexer_test.cisc  output1.txt
src/semantics/: semantic.c
(+5 files in other folders)
